# 305.2-applied-cybersecurity

./: README.md
Blog/: bolg_v1.html
MVP/: .dockerignore  .env.example  .gitignore  Dockerfile  KDriveTools.py  README.md  agent.py  bot_instance.py  docker-compose.yaml  main.py  pyproject.toml
MVP/database_model/: database.sql  models.py  seed.py
MVP/dring_dring_bot/: bot.py
MVP/infomaniak_functions/: create_calendar_event.py
MVP/medi_guide_bot/: bot.py
MVP/tools/: __init__.py  calendar_tools.py  database_tools.py  discussion_tools.py  file_utils.py  kdrive_tools.py  web_search_tool.py
