[project]
name = "mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "caldav>=3.1.0",
    "python-dotenv>=1.2.2",
    "ddgs>=9.13.1",
    "python-telegram-bot>=22.7",
    "requests>=2.33.1",
    "langchain>=1.2.15",
    "langchain-openrouter>=0.2.1",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "sqlmodel>=0.0.38",
    "psycopg2-binary>=2.9.11",
]
